--- a/package.json
+++ b/package.json
@@ -9,17 +9,10 @@
     "react-dom": "^16.8.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.3.4",
-    "@babel/plugin-proposal-class-properties": "^7.3.4",
-    "@babel/preset-env": "^7.3.4",
-    "@babel/preset-react": "^7.0.0",
-    "babel-jest": "^24.5.0",
-    "jest": "^24.5.0",
-    "parcel-bundler": "^1.12.2",
+    "parcel": "^2.0.0",
     "prettier": "^1.16.4"
   },
   "scripts": {
-    "start": "parcel public/index.html",
-    "test": "jest --watch --env=jsdom"
+    "start": "parcel public/index.html"
   }
 }
